@@ -562,6 +562,11 @@
       \item Too long lines in environment files (e.g. \code{Renviron}) no
       longer crash \R. This limit has been increased to 100,000 bytes
       (\PR{18001}).
+
+      \item The workaround for FreeType giving incorrect font faces with
+      cairo-based graphics devices on macOS has been repaired:
+      previously italic and bold italic text were frequently rendered as
+      plain text.
     }
   }
 }
